# MadBench

./: .gitignore  LICENSE  README.md  pyproject.toml
src/madbench/: __init__.py  _logging.py  cli.py  driver.py  results.py  scaffold.py  utils.py  workspace.py
src/madbench/templates/: README.md.template  gitignore.template  madbench.yml.template
src/madbench/web/: __init__.py
tests/: test_driver.py  test_results.py  test_scaffold.py  test_utils.py  test_workspace.py
